[package]
name = "scheme"
version = "0.1.0"
authors = ["OrangeBacon <computer.backup.15@gmail.com>"]
edition = "2018"
description = "Simple scheme implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
anyhow = "1"
thiserror = "1"
lasso = "0.5"
num-bigint = "0.4"
num-traits = "0.2"
num-derive = "0.3"

# not using the latest version, instead using the same version as
# clap to reduce dependencies
strsim = "0.8"
